Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -14,7 +14,8 @@
         * [PassportModelStep1 Step 1 - Create a UPCC model & Import CC Libraries]
         * [PassportModelStep2 Step 2 - Create ABIEs]
         * [PassportModelStep3 Step 3 - Model associations]
-        * [PassportModelStep4 Outlook]    * [Troubleshooting Troubleshooting]
+        * [PassportModelStep4 Outlook]
+    * [Troubleshooting Troubleshooting]
     * [Release_Notes Release Notes]
     * [EnterpriseArchitect The Enterprise Architect]
   * [ForDevelopers Developer infos]
