Edited wiki page through web user interface.

--- a/wiki/PassportModelStep0.wiki
+++ b/wiki/PassportModelStep0.wiki
@@ -4,6 +4,6 @@
 
 Imagine two organisations planning to exchange information electronically, for example human passport data. They decide to use Core Components for creating a sample model for this passport information. The two parties must agree on which information is included in the passport model and how it is organised.
 
-This storyboard shows how to create such a sample passport model using Enterprise Architect and the VIENNA Add-In in three steps. Sample images are included, as well as video tutorials.
+This sample scenario shows how to create such a sample passport model using Enterprise Architect and the VIENNA Add-In in three steps. Sample images are included, as well as video tutorials.
 
 Start with [PassportModelStep1 Passport Model - Step 1] to see how to create the basic EA model needed for the passport information.
