Edited wiki page through web user interface.

--- a/wiki/PassportModelStep2.wiki
+++ b/wiki/PassportModelStep2.wiki
@@ -5,7 +5,7 @@
 In the Project Browser, right-click the BIELibrary and select _Add-Ins / VIENNAAddIn / Create new ABIE_ to launch the _ABIE Editor_ wizard:
 http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild10.gif
 
-In the _ABIE Editor_, create the following ABIEs in the order listed. Note that the ABIEs are created based on the Core Components imported in previous step. It is also necessary to create appropriate BDTs. In the following all necessary steps are listed. 
+In the _ABIE Editor_, create the following ABIEs in the order listed. Note that the ABIEs are created based on the Core Components imported in the previous step. It is also necessary to create appropriate BDTs. In the following all necessary steps are listed. 
 === ABIE _Address_ ===
   # Choose the ACC _Address_:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild11.gif
