Edited wiki page through web user interface.

--- a/wiki/PassportModelStep1.wiki
+++ b/wiki/PassportModelStep1.wiki
@@ -8,7 +8,8 @@
   # After clicking _OK_, the new project is generated. To start modeling business documents using the newly created model, you must define the model as a UPCC Model by selecting _Add-Ins / VIENNAAddIn / Set Model as UMM2/UPCC3 Model_ from the main menu:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild04.gif
   # For creating the standard libraries, launch the _Default UPCC Model Creator_ dialog by selecting _Add-Ins / VIENNAAddIn / Create initial UPCC3 model structure_ from the main menu
-  # In this dialog, create a default model named "Passport Model". Furthermore, select the _Import standard CC Libraries_ checkbox for importing the standard Core Component Library having the major version "democcl" and the minor version "2":
+    http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild06.gif
+  # In this dialog, create a default model named "Passport Model", this name will be used for the newly created bLibrary. Furthermore, select the _Import standard CC Libraries_ checkbox for importing the standard Core Component Library. This options allows downloading a subset of the standard Core Component Libraries, in this case select the major version "democcl" and the minor version "2":
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild07.gif
   # Finally, click the _Generate Default Model_ button. After the default model was generated, a confirmation message is shown:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild09.gif
