--- a/wiki/PassportModelStep2.wiki
+++ b/wiki/PassportModelStep2.wiki
@@ -27,7 +27,7 @@ In the _ABIE Editor_, create the following ABIEs in the order listed. Note that 
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild19.gif
   # Check BCC _StreetName_:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild20.gif
-  # Click _Create ABIE_:
+  # Optionally, the _Prefix used for the generated Artifacts_ textbox provides the possibility to assign a specific prefix to all artifact identifiers. Finally, click _Create ABIE_:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild21.gif
   # A confirmation message shows that the ABIE was created successfully:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild22.gif
@@ -69,7 +69,7 @@ In the _ABIE Editor_, create the following ABIEs in the order listed. Note that 
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild34.gif
   # Now rename the first BBIE from _Passport_ to _Code_Passport_, the second BBIE from _New1Passport_ to _Number_Passport_, and the third BBIE from _New2Passport_ to _Type_Passport_:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild35.gif
-  # Switch to the Associations Tab:
+  # Switch to the Associations Tab. This view allows you to create connections and associations between two ABIEs:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild36.gif
   # For ABIE _Country_ check the ASBIE _Nationality_:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild37.gif
