--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -9,12 +9,11 @@
       * [CreateyourownAbies Create your own ABIEs]
       * [GettingStartedVideos Getting Started Videos] 
     * Sample Scenarios
-      * VIENNA Add-In Passport Modeling
-        * [PassportModelStep0 Introduction]
+      * [PassportModelStep0 Passport Modeling Example]
         * [PassportModelStep1 Step 1 - Create a UPCC model & Import CC Libraries]
         * [PassportModelStep2 Step 2 - Create ABIEs]
         * [PassportModelStep3 Step 3 - Model associations]
-        * [PassportModelStep4 Outlook]
+        * [PassportModelStep4 What's next]
     * [Troubleshooting Troubleshooting]
     * [Release_Notes Release Notes]
     * [EnterpriseArchitect The Enterprise Architect]
