Edited wiki page through web user interface.

--- a/wiki/PassportModelStep0.wiki
+++ b/wiki/PassportModelStep0.wiki
@@ -6,8 +6,6 @@ Imagine two organisations that are planning to exchange information electronical
 
 This sample scenario shows how to create such a sample passport model using Enterprise Architect and the VIENNA Add-In in three steps. Sample images are included, as well as video tutorials.
 
-Start with [PassportModelStep1 Passport Model - Step 1] to see how to open an Enterprise Architect project file, create a UPCC model and import the standard libraries needed for Core Component compliance.
-
-[PassportModelStep2 Passport Model - Step 2] explains which ABIE elements are needed for modeling the passport data and how they are created.
-
+Start with [PassportModelStep1 Passport Model - Step 1] to see how to open an Enterprise Architect project file, create a UPCC model and import the standard libraries needed for Core Component compliance.<br>
+[PassportModelStep2 Passport Model - Step 2] explains which ABIE elements are needed for modeling the passport data and how they are created.<br>
 Finally, [PassportModelStep3 Passport Model - Step 3] illustrates how to combine these elements in order to create a complete business document.
