--- a/wiki/PassportModelStep3.wiki
+++ b/wiki/PassportModelStep3.wiki
@@ -2,7 +2,7 @@
 
 = Step 3 - Document modeling =
 
-  # Open the _DOCLibrary_ by doucle-clicking it in the Project Browser:
+  # A DOCLibrary is used to aggregate different ABIEs. Open the _DOCLibrary_ by doucle-clicking it in the Project Browser:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild39.gif
   # Select the ABIEs created in the previous step, namely _Address_, _Country_, _Period_, and _Person_ in the Project Browser, and drag-and-drop them onto the canvas:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild40.gif
@@ -19,7 +19,7 @@
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild44.gif
   # ...and choose _UPCC 3.0 / UPCC3 - DOCLIbrary Abstract Syntax_ from the menu:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild45.gif
-  # From the toolbox, drag-and-drop the UPCC Artefact _MA_ onto the canvas
+  # ABIEs are aggregaten in a DOCLibrary using the concept of message assemblies (MA). A message assembly is connected to each ABIE it aggregates by an association message assembly (ASMA). To create a new message assembly, drag-and-drop the UPCC Artefact _MA_ from the toolbox onto the canvas:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild46.gif
   # Rename the newly created MA to _Passport_:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild47.gif
