--- a/wiki/PassportModelStep3.wiki
+++ b/wiki/PassportModelStep3.wiki
@@ -19,7 +19,7 @@
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild44.gif
   # ...and choose _UPCC 3.0 / UPCC3 - DOCLIbrary Abstract Syntax_ from the menu:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild45.gif
-  # ABIEs are aggregaten in a DOCLibrary using the concept of message assemblies (MA). A message assembly is connected to each ABIE it aggregates by an association message assembly (ASMA). To create a new message assembly, drag-and-drop the UPCC Artefact _MA_ from the toolbox onto the canvas:
+  # ABIEs are aggregated in a DOCLibrary using the concept of message assemblies (MA). A message assembly is connected to each ABIE it aggregates by an association message assembly (ASMA). To create a new message assembly, drag-and-drop the UPCC Artefact _MA_ from the toolbox onto the canvas:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild46.gif
   # Rename the newly created MA to _Passport_:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild47.gif
