--- a/wiki/PassportModelStep0.wiki
+++ b/wiki/PassportModelStep0.wiki
@@ -4,11 +4,9 @@
 
 An example for exchanging information electronically using Core Components is the following scenario: Two neighbouring countries decide to implement additional security standards on the border. When inhabitants move from one of the two countries to the other, their passports should be compared to a central database to check the document's authenticity and therefore prohibit the use of forged passport documents.
 
-To establish such a central database, the two countries need to exchange the passport data of all inhibitants. They decide to 
+To establish such a central database, the two countries need to exchange the passport data of all inhibitants. They decide to exchange this data electronically using Core Components. For modeling a business document containing passport data, the two parties must agree on which information is included in the passport model and how this information is organised.
 
-Imagine two organisations that are planning to exchange information electronically, for example human passport data. They decide to use Core Components for creating a sample model for this passport information. The two parties must agree on which information is included in the passport model and how this information is organised.
-
-This sample scenario shows how to create such a sample passport model using Enterprise Architect and the VIENNA Add-In in three steps. Sample images are included, as well as video tutorials.
+The next pages show how to create such a sample passport model using Enterprise Architect and the VIENNA Add-In in three steps. Sample images are included, as well as video tutorials.
 
 Start with [PassportModelStep1 Passport Model - Step 1] to see how to open an Enterprise Architect project file, create a UPCC model and import the standard libraries needed for Core Component compliance.<br>
 [PassportModelStep2 Passport Model - Step 2] explains which ABIE elements are needed for modeling the passport data and how they are created.<br>
