--- a/wiki/PassportModelStep3.wiki
+++ b/wiki/PassportModelStep3.wiki
@@ -19,11 +19,11 @@
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild44.gif
   # ...and choose _UPCC 3.0 / UPCC3 - DOCLIbrary Abstract Syntax_ from the menu:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild45.gif
-  # ABIEs are aggregated in a DOCLibrary using the concept of message assemblies (MA). A message assembly is connected to each ABIE it aggregates by an association message assembly (ASMA). To create a new message assembly, drag-and-drop the UPCC Artefact _MA_ from the toolbox onto the canvas:
+  # ABIEs are aggregated in a DOCLibrary using the concept of message assemblies (MA). A message assembly is connected to each ABIE it aggregates by an association message assembly (ASMA). To create a new message assembly, drag-and-drop the UPCC artifact _MA_ from the toolbox onto the canvas:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild46.gif
   # Rename the newly created MA to _Passport_:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild47.gif
-  # Select the UPCC Artefact _ASMA_ from the toolbox
+  # Select the UPCC artifact _ASMA_ from the toolbox
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild48.gif
   # Drag an ASMA from the ABIE _Period_ to the MA _Passport_:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild49.gif
