--- a/wiki/PassportModelStep3.wiki
+++ b/wiki/PassportModelStep3.wiki
@@ -2,20 +2,7 @@
 
 = Step 3 - Document modeling =
 
-  # A DOCLibrary is used to aggregate different ABIEs. Open the _DOCLibrary_ by doucle-clicking it in the Project Browser:
-    http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild39.gif
-  # Select the ABIEs created in the previous step, namely _Address_, _Country_, _Period_, and _Person_ in the Project Browser, and drag-and-drop them onto the canvas:
-    http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild40.gif
-    http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild41.gif
-  # In the _Paste Element_ dialog, choose to paste the element as simple link:
-    http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild42.gif
-  # The DOCLibrary canvas should now contain the four ABIEs, including the associating ASBIEs:
-    http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild43.gif
-  # Exactly one address and one country is assigned to a person, to model this you must change the cardinality values of the two ASBIEs: Double-click the ASBIEs, in the _Aggregation Properties_ dialog switch to the _Target Role_ tab and change the _Multiplicity_ value to 1:
-    http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild43a.gif
-  # Then click _OK_
-    http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild43b.gif
-  # If the _UPCC DOCLibrary_ toolbox is not visible, load it by clicking the _More tools..._ button...
+  # A DOCLibrary is used to aggregate different ABIEs. If the _UPCC DOCLibrary_ toolbox is not visible, load it by clicking the _More tools..._ button...
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild44.gif
   # ...and choose _UPCC 3.0 / UPCC3 - DOCLIbrary Abstract Syntax_ from the menu:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild45.gif
