wiki: added Subsettingwizard Wikipage

--- a/wiki/SubsettingWizard.wiki
+++ b/wiki/SubsettingWizard.wiki
@@ -1,13 +1,10 @@
-#summary One-sentence summary of this page.
+#summary Subsetting Wizard Documentation
 
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_startscreen.png
+http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_chooseDocLib.png
+http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_collapsed_treeview.png
+http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_expanded_treeview.png
+http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_expanded_treeview_selectedAbie.png
+http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_expanded_treeview_uncheckAbie.png
+http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_loading.png
+http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_startscreen.png
