--- a/wiki/SchemaAnalyzer.wiki
+++ b/wiki/SchemaAnalyzer.wiki
@@ -1,9 +1,18 @@
-#summary Subsetting Wizard Documentation
+#summary Schema Analyzer Documentation
+The Schema Analyzer can be used to retrieve key data out of XML schemas. 
 
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_EA_menuentry.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_startscreen.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_filechooser.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_startscreen_with_filenames.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_xsd1.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_xsd2.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_xsdcomparison.png
+=Analyze an XML Schema=
+  # Select _Add-Ins / VIENNAAddIn / Wizards / Schema Analyzer_ from the main menu:
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_EA_menuentry.png
+  # The start screen displays a file dialog where you can choose one or two XML schema files for analyzation.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_startscreen.png
+  # After clicking on one of the "..." buttons you can select an XML schema file in a default Windows dialog.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_filechooser.png
+  # In this example we selected two schemas, the first is the ebInterface invoice and the second is the invoice as defined in UBL.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_startscreen_with_filenames.png
+  # The resulting graph for ebInterface invoice:  
+	http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_xsd1.png
+  # And the graph for UBL invoice:
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_xsd2.png
+  # The last tab shows a comparison of the provided XML schemas.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_xsdcomparison.png
