--- a/wiki/SubsettingWizard.wiki
+++ b/wiki/SubsettingWizard.wiki
@@ -1,10 +1,21 @@
 #summary Subsetting Wizard Documentation
+The Subsetting Wizard can be used to create a subset of an existing model.
 
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_EA_menuentry.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_startscreen.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_chooseDocLib.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_loading.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_collapsed_treeview.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_expanded_treeview.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_expanded_treeview_selectedAbie.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_expanded_treeview_uncheckAbie.png
+=Transform an existing Model=
+  # Prepare a UPCC3 model in Enterprise Architect
+  # Select _Add-Ins / VIENNAAddIn / Wizards / Subsetting Wizard_ from the main menu:
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/schemaanalyzer_EA_menuentry.png
+  # When started, the Subsetting Wizard shows an empty dialog with a dropdown box to select a doc library and three empty columns.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_startscreen.png
+  # After choosing a DOC library from the list of available libraries, the corresponding ABIEs, BBIEs and ASBIEs will be loaded
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_chooseDocLib.png
+  # While the loading operation is beeing performed, the progress is indicated with a spinning wheel.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_loading.png
+  # When loading has finished, a tree view will be displayed in the first column. It will be collapsed by default.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_collapsed_treeview.png
+  # You can expand the treeview at any level to show it's children which represent connected ABIEs or MAs.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_expanded_treeview.png
+  # You can select an ABIE to display it's corresponding BBIEs in the second column.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_expanded_treeview_selectedAbie.png
+  # When you uncheck an ABIE or BBIE it will be removed from the current model. If you select an ABIE, it's contained BBIEs will be removed as well if they are not used anywhere else. The wizard also takes care of dependencies between related elements. If you select a child element, it's parents will be selected as well.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_subsettingwizard/subsettingwizward_expanded_treeview_uncheckAbie.png
