--- a/wiki/XmlSchemaGenerator.wiki
+++ b/wiki/XmlSchemaGenerator.wiki
@@ -1,12 +1,25 @@
-#summary Subsetting Wizard Documentation
-
-http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_EAmenuentry.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_startscreen.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_doclibselected.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_rootMaChecked.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_outputdirectoryset.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_namespaceset.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_checkboxeschecked.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_exportschemaclick.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_generationprogress.png
-http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_generationcompleted.png
+#summary XML Schema Generator Documentation
+The XML Schema Generator can be used to export an existing model to an XML Schema. 
+    
+=Generate an XML Schema=
+  # Prepare a UPCC3 model in Enterprise Architect
+  # Select _Add-Ins / VIENNAAddIn / Wizards / Generate XML Schema_ from the main menu:
+    http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_EAmenuentry.png
+  # First the wizard will show only empty fields, you have to select a Business Information View to start.
+	http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_startscreen.png
+  # After Selecting a Business Information View you can choose the Documents which should be exported to an XML schema.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_doclibselected.png
+  # Every selected Document will be included in the exported XML schema set.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_rootMaChecked.png
+  # Next a output directory for the XML schema file has to be selected. This can be done by clicking on the "..." button and selecting a file using a default Windows file selection dialog.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_outputdirectoryset.png
+  # Now it is time to define a target namespace and a custom prefix. The next image shows some example entries.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_namespaceset.png
+  # You can decide on your own wether documentation annotations should be included in the generated XML schema files. The same applies to the generation of Core Component Schemas.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_checkboxeschecked.png
+  # After clicking on the "Export XML Schem" button, the generator starts to generate the XML schema files. The progress is shown in the Status textbox at the bottom.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_exportschemaclick.png
+  # The status field is updated on every progress made by the generator.
+	http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_generationprogress.png
+  # When the generation progress has finished, the status field will show "Generating XML schemas completed!" in the last line of the textbox.
+    http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemagenerator/schemagenerator_generationcompleted.png
