Edited wiki page through web user interface.

--- a/wiki/TransformerWizard.wiki
+++ b/wiki/TransformerWizard.wiki
@@ -55,3 +55,19 @@ The Transformer Wizard can be used to transform an existing model to a target XM
     http://vienna-add-in.googlecode.com/svn/wiki/images_transformerwizard/Bild25.gif
   # If the process was successfull a notification is displayed, offering to open the resulting model.
     http://vienna-add-in.googlecode.com/svn/wiki/images_transformerwizard/Bild26.gif
+
+=References=
+(1) UMM Development Site http://umm-dev.org/
+
+(2) CCTS standard http://www.untmg.org/wp-content/uploads/2008/06/specification_ccts3p0odp620080207.pdf
+
+=Related Tasks=
+[CreateaModelinEA Create a model in Enterprise Architect]: This page explains how to open a project file and create a model in Enterprise Architect
+
+[CreateaUpccModel Create your first UPCC model]: This page explains how to create a UPCC model
+
+[ImportStandardCCLibraries Import standard CC Libraries]: This page explains how to download and import standard Core Component Libraries into an existing UPCC3 model
+
+[CreateyourownBdts Create your own BDTs]: This page explains how to create BDTs using the _BDT Editor_
+
+[GettingStartedVideos Getting Started Videos]: This page contains a few videos explaining common tasks using the VIENNA Add-In
