--- a/wiki/TransformerWizard.wiki
+++ b/wiki/TransformerWizard.wiki
@@ -70,4 +70,6 @@ The Transformer Wizard can be used to transform an existing model to a target XM
 
 [CreateyourownBdts Create your own BDTs]: This page explains how to create BDTs using the _BDT Editor_
 
+[CreateyourownAbies Create your own ABIEs]: This page explains how to create ABIEs using the _ABIE Editor_
+
 [GettingStartedVideos Getting Started Videos]: This page contains a few videos explaining common tasks using the VIENNA Add-In
