--- a/wiki/XmlSchemaGenerator.wiki
+++ b/wiki/XmlSchemaGenerator.wiki
@@ -42,4 +42,6 @@ The XML Schema Generator can be used to export an existing model to an XML Schem
 
 [CreateyourownAbies Create your own ABIEs]: This page explains how to create ABIEs using the _ABIE Editor_
 
+[TransformerWizard Transform a Model]: This page explains how to transform an existing UPCC3 model
+
 [GettingStartedVideos Getting Started Videos]: This page contains a few videos explaining common tasks using the VIENNA Add-In
