--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -7,6 +7,7 @@
       * [ImportStandardCCLibraries Import standard CC Libraries into an existing UPCC3 model]
       * [CreateyourownBdts Create your own BDTs]
       * [CreateyourownAbies Create your own ABIEs]
+      * [ModifyABIE Modify an existing ABIE]
       * [SchemaAnalyzer Analyze an XML Schema]
       * [XmlSchemaImporter Import an XML Schema]
       * [TransformerWizard Transform a Model]
